--- a/Login/pages/pages.css
+++ b/Login/pages/pages.css
@@ -1,8 +1,28 @@
 :root {
 
+    --cinza-escuro: #BFBFBF;
+    --cinza-medio: #D9D9D9;
+    --cinza-claro: #F2F2F2;
+    --cinza-claro1: #F4F4F2;
+    --cinza-claro2: #F5F5F5;
+    --texto-claro1: #fff0df93;
+    --texto-claro: #fff7ee;
+
     --azul-menu: #37367a;
     --azul-lista: #434291;
     --azul-selecao: #37366f;
+    --azul-escuro: #363062;
+    --azul-medio: #4d4c7d;
+    
+    --tema-escuro: #201b2c;
+    --tema-escuro1: #2f2841;
+    --tema-escuro2: #514869;
+    --efeito-blur: #00000056;
+
+    --laranja-logo: #F58634;
+    --laranja-padrao: #f99417;
+    --laranja-claro: #fe910d;
+    --laranja-escuro: #593100;
 
     --fonte-padrao: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
@@ -93,7 +113,6 @@ button > img {
 .menu {
     list-style: none;
     padding: 0;
-    text-align: center;
 }
 
 .menu li {
@@ -167,14 +186,10 @@ footer > img {
 
 
 .glow-on-hover {
-    width: 220px;
-    height: 50px;
     border: none;
     outline: none;
-    background-color: var(--azul-lista);
     position: relative;
     z-index: 0;
-    border-radius: 10px;
 }
 
 .glow-on-hover:before {
