--- a/Login/pages/pages.css
+++ b/Login/pages/pages.css
@@ -63,6 +63,7 @@ body {
     border: solid rgba(255, 255, 255, 0.525) 1px;
     border-radius: 5px;
     cursor: pointer;
+    padding: 1px 3px;
     
 }
 
@@ -71,7 +72,7 @@ body {
 }
 
 #toggleButton img {
-    padding-top: 5px;
+    padding-top: 3px;
 }
 
 button {
@@ -79,8 +80,8 @@ button {
     display: inline-flex;
 }
 
-button > img {
-    padding-right: 2px;
+.logout img {
+    padding-right: 3px;
 }
 
 .sidebar {
